--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.4.0",
-    "cookie-parser": "^1.4.6",
+    "cloudinary": "^2.5.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "ioredis": "^5.4.1",
+    "express": "^4.21.2",
+    "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.3",
-    "stripe": "^16.8.0"
+    "mongoose": "^8.9.4",
+    "stripe": "^16.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
   },
-  "description": ""
+  "description": "**Whisk and Drizzle** is a full-stack E-Commerce platform specializing in desserts. It integrates with Stripe for secure payment processing and includes a coupon system to allow customers to apply discounts at checkout. The frontend is built with ReactJS and uses Zustand for global state management, while the backend is powered by Node.js and Express."
 }
